<resources>
    <string name="app_name">QuanLyChiTieu</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login_here">Already have an account? <b><u>Login</u></b>.</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account?  <b><u>Sign up?</u></b>.</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="title_activity_account_created_modal">AccountCreatedModalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_account_has_been_created_successfully_you_can_now_login">Your account has been created successfully. You can now login!</string>
    <string name="account_created_successfully">Account Created Successfully!</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="note_if_the_email_that_you_enter_exists_in_our_system_we_will_send_you_a_reset_password_email">NOTE: If the email that you enter exists in our system, we will send you a reset password email</string>
    <string name="profile">Profile</string>
    <string name="reports">Reports</string>
    <string name="transactions">Transactions</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back_to_login">Go back to Login</string>
    <string name="resetpassword">Reset password</string>
    <string name="log_out">Log out</string>
    <string name="change_your_password">Change your password</string>
    <string name="application_term_privacy"><![CDATA[Application Term & Privacy Policy]]></string>
    <string name="privacy">
<b>SaveMoney Privacy Policy </b>
    SaveMoney’s Privacy Policy describes how we collects, uses, and shares your personal data.
<i>Updated April 22, 2023</i> \n
    In addition to this Privacy Policy, we provide data and privacy information embedded in our products and certain features that ask to use your personal data. This product-specific information is accompanied by our Data Privacy Icon. You will be given an opportunity to review this product-specific information before using these features. You also can view this information at any time, either in Settings related to those features and/or online at apple.com/legal/privacy/data. You can familiarize yourself with our privacy practices, accessible via the headings below, and contact us if you have questions. \n
<b>What Is Personal Data at SaveMoney?</b>
    At SaveMoney, we believe strongly in fundamental privacy rights — and that those fundamental rights should not differ depending on where you live in the world. That’s why we treat any data that relates to an identified or identifiable individual or that is linked or linkable to them by us as “personal data,” no matter where the individual lives. This means that data that directly identifies you — such as your name — is personal data, and also data that does not directly identify you, but that can reasonably be used to identify you — such as the serial number of your device — is personal data. Aggregated data is considered non-personal data for the purposes of this Privacy Policy. This Privacy Policy covers how Team4 or an Team4-affiliated company (collectively, "SaveMoney") handles personal data whether you interact with us on our websites, through Team4 apps (such as SaveMoney or any apps else), or in person (including by phone or when visiting our retail stores). We may also link to third parties on our sevices. Team4’s Privacy Policy does not apply to how third parties define personal data or how they use it. We encourage you to read their privacy policies and know your privacy rights before interacting with them. \n
<b>Your Privacy Rights at Team4 applications</b>
    At SaveMoney, we respect your ability to know, access, correct, transfer, restrict the processing of, and delete your personal data. We have provided these rights to our global customer base and if you choose to exercise these privacy rights, you have the right not to be treated in a discriminatory way nor to receive a lesser degree of service from us. Where you are requested to consent to the processing of your personal data by Team4, you have the right to withdraw your consent at any time. To exercise your privacy rights and choices including where a third-party service provider is acting on Team4’s behalf, visit the Team4 Data and Privacy page at privacy.team4.com (Not a real URL) for us. To help protect the security of your personal data, you must sign in to your account and your identity will be verified. If you want to obtain a copy of personal data that is not currently available from privacy.team4.com, you can make a request at team4.com/legal/privacy/contact. There may be situations where we cannot grant your request — for example, if you ask us to delete your transaction data and SaveMoney is legally obligated to keep a record of that transaction to comply with law. \n
<b>What Is Personal Data at Team4?</b>
      - Your Privacy Rights at Team4
      - Personal Data SaveMoney Collects from You
      - Personal Data SaveMoney Receives from Other Sources
      - SaveMoney’s Use of Personal Data
      - SaveMoney’s Sharing of Personal Data
      - Protection of Personal Data at SaveMoney
      - Children and Personal Data
      - Cookies and Other Technologies
      - Transfer of Personal Data Between Countries \n
<b>Our Companywide Commitment to Your Privacy </b>
    Privacy Questionsmay also decline to grant a request where doing so would undermine our legitimate use of data for antifraud and security purposes, such as when you request deletion of an account that is being investigated for security concerns. Other reasons your privacy request may be denied are if it jeopardizes the privacy of others, is frivolous or vexatious, or would be extremely impractical. If you live in California and you cannot access Team4’s Data and Privacy page, you or your authorized agent can make a request at team4.com/legal/privacy/contact or by calling 0929350924.
<i>For more information on exercising your rights, visit support.team4.com/kb/HT208501.</i> \n
<b>Personal Data Team4 Collects from You</b>
    At Team4, we believe that you can have great products and great privacy. This means that we strive to collect only the personal data that we need. Descriptions of how we handles personal data for certain individual services are available at team4.com/legal/privacy/data. When you create an SaveMoney ID, apply for commercial credit, purchase and/or activate a product or device, download a software update, register for a class at Google Play, connect to our services, contact us (including by social media), participate in an online survey, or otherwise interact with Apple, we may collect a variety of information, including:
	  • Account Information. Your SaveMoney ID and related account details, including email address, devices registered, account status, and age
	  • Device Information. Data from which your device could be identified, such as device serial number, or about your device, such as browser type
	  • Contact Information. Data such as name, email address, physical address, phone number, or other contact information
	  • Payment Information. Data about your billing address and method of payment, such as bank details, credit, debit, or other payment card information
	  • Transaction Information. Data about purchases of Team4's products and services or transactions facilitated by Team4, including purchases on Team4 platforms
	  • Fraud Prevention Information. Data used to help identify and prevent fraud, including a device trust score
	  • Usage Data. Data about your activity on and use of our offerings, such as app launches within our services, including browsing history; search history; product interaction; crash data, performance and other diagnostic data; and other usage data
	  • Location Information. Precise location only to support services such as Find My or where you agree for region-specific services, and coarse location
	  • Health Information. Data relating to the health status of an individual, including data related to one’s physical or mental health or condition. Personal health data also includes data that can be used to make inferences about or detect the health status of an individual. If you participate in a study using an Team4 app, the policy governing the privacy of your personal data is described in the Team4 Apps Privacy Policy.
	  • Fitness Information. Details relating to your fitness and exercise information where you choose to share them
    </string>
    <string name="_0">0 Đ</string>
</resources>