<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:id="@+id/container"
		android:padding="10dp">
	
	<EditText
			android:id="@+id/editTextEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"/>
	
	<EditText
			android:id="@+id/editTextPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/password"
			android:inputType="textPassword"/>
	
	<Button
			android:id="@+id/buttonLogin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/login"/>
	
	<TextView
			android:id="@+id/textViewRegisterLink"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/don_t_have_an_account_register_here"
			android:clickable="true"
			android:gravity="center"
			android:textColor="@android:color/holo_blue_dark"
			android:textSize="16sp"/>

</LinearLayout>